--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prebuild": "rm -rf ./dist",
-    "build": "tsc"
+    "build": "tsc",
+    "postbuild": "cp -r ./src/assets ./dist/assets"
   },
   "devDependencies": {
+    "@types/ejs": "^3.1.1",
     "@types/node": "^18.11.18",
     "prettier": "^2.8.3",
     "typescript": "^4.9.4"
@@ -25,10 +27,12 @@
     "@readme/variable": "^15.1.2",
     "@tippyjs/react": "^4.2.6",
     "cmd-ts": "^0.11.0",
+    "ejs": "^3.1.8",
     "oas": "^20.4.0",
     "oas-normalize": "^8.3.1",
     "openapi-types": "^12.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.57.1"
   }
 }
