--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "keywords": [
     "openapi"
   ],
+  "files": ["bin", "dist", "LICENSE", "README.md", "package.json"],
   "bin": {
     "print-openapi": "./bin/print-openapi"
   },
