--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "Generate a printable HTML file from your OpenAPI spec.",
   "author": "Daniel Oakley <daniel@danieloaks.net>",
+  "repository": "github:sendle/print-openapi",
   "license": "MIT",
   "keywords": [
     "openapi"
