--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
   "keywords": [
     "openapi"
   ],
-  "files": ["bin", "dist", "LICENSE", "README.md", "package.json"],
+  "files": [
+    "bin",
+    "dist",
+    "LICENSE",
+    "README.md",
+    "package.json"
+  ],
   "bin": {
     "print-openapi": "./bin/print-openapi"
   },
@@ -30,6 +36,7 @@
     "@tippyjs/react": "^4.2.6",
     "cmd-ts": "^0.11.0",
     "ejs": "^3.1.8",
+    "highlight.js": "^11.7.0",
     "oas": "^20.4.0",
     "oas-normalize": "^8.3.1",
     "openapi-types": "^12.1.0",
