--- a/package.json
+++ b/package.json
@@ -19,15 +19,21 @@
     "print-openapi": "./bin/print-openapi"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "prebuild": "rm -rf ./dist",
     "build": "tsc",
     "postbuild": "cp -r ./src/assets ./dist/assets"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.1",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
+    "@types/tempy": "^0.3.0",
+    "jest": "^29.4.3",
     "prettier": "^2.8.3",
+    "tempy": "^3.0.0",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
