--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "@types/ejs": "^3.1.1",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
-    "@types/tempy": "^0.3.0",
+    "@types/tmp": "^0.2.3",
     "jest": "^29.4.3",
     "prettier": "^2.8.3",
-    "tempy": "^3.0.0",
+    "tmp": "^0.2.1",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
