--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
     "@types/tmp": "^0.2.3",
+    "html-validator": "^6.0.1",
     "jest": "^29.4.3",
     "prettier": "^2.8.3",
     "tmp": "^0.2.1",
