--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "openapi-types": "^12.1.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "sass": "^1.57.1"
+    "sass": "^1.57.1",
+    "slugify": "^1.6.5"
   }
 }
